[gd_scene load_steps=4 format=3 uid="uid://c61dat3glfhgc"]

[ext_resource type="Script" path="res://scenes/IFSSettings.gd" id="1_1ucaj"]
[ext_resource type="Texture2D" uid="uid://dcs7kjpveqfpb" path="res://assets/panels-1.png" id="1_i57yb"]
[ext_resource type="PackedScene" uid="uid://yp72ekk8try7" path="res://scenes/ContractionSettings.tscn" id="2_hq0ss"]

[node name="IFSSettings" type="MarginContainer"]
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_1ucaj")

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Content"]
layout_mode = 2
texture = ExtResource("1_i57yb")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Content" type="MarginContainer" parent="Content"]
layout_mode = 2
theme_override_constants/margin_top = 48

[node name="Lines" type="VBoxContainer" parent="Content/Content"]
layout_mode = 2

[node name="HBoxContainer" type="GridContainer" parent="Content/Content/Lines"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 3

[node name="Label1" type="Label" parent="Content/Content/Lines/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "property"

[node name="Label2" type="Label" parent="Content/Content/Lines/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "min"

[node name="Label3" type="Label" parent="Content/Content/Lines/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "max"

[node name="NbContractionsLabel" type="Label" parent="Content/Content/Lines/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "contractions"

[node name="MinEdit" type="SpinBox" parent="Content/Content/Lines/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 1.0

[node name="MaxEdit" type="SpinBox" parent="Content/Content/Lines/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 5.0

[node name="DelayLabel" type="Label" parent="Content/Content/Lines/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "delay"

[node name="DelayMinEdit" type="SpinBox" parent="Content/Content/Lines/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DelayMaxEdit" type="SpinBox" parent="Content/Content/Lines/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 100.0

[node name="CenteredLabel" type="Label" parent="Content/Content/Lines"]
layout_mode = 2
size_flags_horizontal = 3
text = "probability of the image to
be centered:"

[node name="CenteredEdit" type="SpinBox" parent="Content/Content/Lines"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.88

[node name="BGColorChecker" type="CheckBox" parent="Content/Content/Lines"]
layout_mode = 2
button_pressed = true
text = "allow random background color"

[node name="ContractionSettings" parent="Content/Content/Lines" instance=ExtResource("2_hq0ss")]
layout_mode = 2

[node name="Heading" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Heading"]
layout_mode = 2
texture = ExtResource("1_i57yb")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="Heading"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="Heading/MarginContainer"]
layout_mode = 2
text = "ifs settings"

[connection signal="value_changed" from="Content/Content/Lines/HBoxContainer/MinEdit" to="." method="_on_min_edit_value_changed"]
[connection signal="value_changed" from="Content/Content/Lines/HBoxContainer/MaxEdit" to="." method="_on_max_edit_value_changed"]
[connection signal="value_changed" from="Content/Content/Lines/HBoxContainer/DelayMinEdit" to="." method="_on_delay_min_edit_value_changed"]
[connection signal="value_changed" from="Content/Content/Lines/HBoxContainer/DelayMaxEdit" to="." method="_on_delay_max_edit_value_changed"]
[connection signal="value_changed" from="Content/Content/Lines/CenteredEdit" to="." method="_on_centered_edit_value_changed"]
[connection signal="pressed" from="Content/Content/Lines/BGColorChecker" to="." method="_on_bg_color_checker_pressed"]
